# meta-feeder-tribler

./: Cargo.toml  README.md
.github/workflows/: docker-publish.yml  publish.yml
crates/meta-feeder-sdk/: Cargo.toml
crates/meta-feeder-sdk/src/: cache.rs  common.rs  config.rs  config_page.html  enrich.rs  filename_meta.rs  hash.rs  lang.rs  lib.rs  meta_core.rs  plugin.rs  query.rs  query_eval.rs  serve.rs  types.rs
feeder-plugin/tribler-feeder/: Cargo.toml  Dockerfile
feeder-plugin/tribler-feeder/src/: consts.rs  discovery.rs  enrich.rs  filename_meta.rs  lib.rs  main.rs  title.rs  tmdb.rs  tmdb_budget.rs
feeder-plugin/tribler-feeder/src/tribler/: metainfo.rs  mod.rs
feeder-plugin/tribler-feeder/tests/: contract.rs
